# KVV_Tracker_API

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  LICENSE  Makefile  README.md  SELF_HOSTED_BACKEND_FEASIBILITY.md  XML_ADDINFO_REQUEST (1).json  app.py  cmake_install.cmake  db_connection.txt  docker-compose.test.yml  kvv_aggregator  main.cpp  utils.h  vehicle_types.txt
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  kvv_aggregator
docs/: API_DOCUMENTATION.md  DB_DOCUMENTATION.md  db_connection.txt.example  vehicle_types.txt
include/transit_tracker/: app.hpp  core.hpp  runtime.hpp
src/: app.cpp  core.cpp  main.cpp  runtime.cpp
src/config/: config.h
src/db/: database.cpp  database.h
src/middleware/: api_key_auth.cpp  api_key_auth.h
src/models/: api_key.cpp  api_key.h
src/routes/: auth_routes.cpp  auth_routes.h  departures_routes.cpp  departures_routes.h  notifications_routes.cpp  notifications_routes.h  stops_routes.cpp  stops_routes.h  vehicles_routes.cpp  vehicles_routes.h
src/services/: auth_service.cpp  auth_service.h  departures_service.cpp  departures_service.h  notifications_service.cpp  notifications_service.h  stops_service.cpp  stops_service.h
tests/: db_connection_test.txt  db_init.sql  test_core.cpp  test_routes.cpp
tests/api/: conftest.py  mock_provider_server.py  test_auth_and_health.py  test_current_notifs.py  test_get_departures.py  test_stops_search.py
tests/api/db/: init.sql
tests/api/fixtures/: departures_7000107.json  departures_default.json  notifs_7000107.json  notifs_default.json  search_response.json
tests/cpp/: CMakeLists.txt  test_core_helpers.cpp  test_utils.cpp
